# dataarm_notifier

./: .gitignore  CHANGELOG.md  CLAUDE.md  DEVELOPMENT.md  FINAL_PACKAGE_INFO.md  FINAL_PACKAGE_STATUS.md  MANIFEST.in  PACKAGE_READY.md  PYPI_PACKAGING_GUIDE.md  PYPI_README.md  README.md  SIMPLIFIED_SUMMARY.md  build_package.sh  demo.py  example.py  pyproject.toml  requirements.txt  setup.py  socket_client.py  socket_server.py  test_can_metrics_mock.py  test_can_metrics_system.py  test_keyboard.py  test_state_notifier.py  test_three_light.py
dataarm_notifier/: __init__.py  color_cycle_controller.py  keyboard_listener.py  keyboard_listener_mock.py  robot_state_notifier.py  socket_server.py  telemetry_config.yaml  usb_lamp_controller.py
dataarm_notifier-1.0.0/: PKG-INFO  README.md  pyproject.toml  setup.py
dataarm_notifier-1.0.0/dataarm_notifier/: __init__.py  socket_client.py  socket_server.py
dataarm_notifier/cli/: telemetry_cli.py
dataarm_notifier/examples/: telemetry_alerts.py  telemetry_camera.py  telemetry_dynamics.py  telemetry_motion_tracking.py  telemetry_simulation.py
dataarm_notifier/telemetry/: CAN_METRICS_README.md  README.md  __init__.py  __main__.py  arm_telemetry_server.py  camera.py  can_metrics_server.py  config.py  data_types.py  enums.py  producer.py  simulation.py
specs/001-can-monitor-integration/: spec.md  tasks.md
specs/001-can-monitor-integration/checklists/: requirements.md
specs/001-can-monitor-integration/plan/: data-model.md  plan.md  quickstart.md
tests/: __init__.py  conftest.py  test_usb_lamp_controller.py
tests/telemetry/: test_camera.py  test_can_metrics_client.py  test_can_metrics_server.py  test_config.py  test_data_types.py  test_enums.py  test_integration.py  test_producer.py  test_simulation.py  test_state_machine.py
