[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dataarm-notifier"
version = "1.0.0"
description = "USB报警灯控制器 - 支持控制红灯、绿灯、蓝灯以及颜色轮换"
readme = "README.md"
requires-python = ">=3.6"
license = "MIT"
authors = [
    {name = "lr-2002", email = "wang2629651228@gmail.com"},
]
maintainers = [
    {name = "lr-2002", email = "wang2629651228@gmail.com"},
]
keywords = ["usb", "alarm", "light", "led", "modbus", "serial"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Hardware :: LEDs",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "pyserial>=3.5",
]

[project.urls]
Homepage = "https://github.com/YOUR_USERNAME/dataarm-notifier"
Documentation = "https://github.com/YOUR_USERNAME/dataarm-notifier#readme"
Repository = "https://github.com/YOUR_USERNAME/dataarm-notifier.git"
"Bug Tracker" = "https://github.com/YOUR_USERNAME/dataarm-notifier/issues"

[project.scripts]
usb-lamp = "dataarm_notifier.usb_lamp_controller:main"
usb-lamp-server = "dataarm_notifier.socket_server:main"
usb-lamp-client = "dataarm_notifier.socket_client:main"

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov>=2.0",
    "black>=21.0",
    "flake8>=3.8",
    "build>=0.7.0",
    "twine>=3.4.0",
]

[tool.setuptools.packages.find]
include = ["dataarm_notifier*"]

[tool.setuptools.package-data]
"*" = ["*.md", "*.txt", "*.yml", "*.yaml"]

[tool.black]
line-length = 88
target-version = ['py36']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v"

[tool.coverage.run]
source = ["dataarm_notifier"]
omit = ["*/tests/*", "*/test_*.py"]
